--- a/main.html
+++ b/main.html
@@ -7,9 +7,61 @@
 </head>
 
 <body>
+	<form method ="post">
+		<div>
+			<label for="name">Name*</label>
+	        <input type="text" id="name" placeholder="Name" name="name" required>
+		</div>
+
+		<div>
+			<label for="email">Email*</label>
+	        <input type="email" id="email" placeholder="Email" name="email" required>
+		</div>
+
+		<div>
+			<label for="gender">Gender*</label>
+		    <label for="gender_m">Male</label>
+	        <input type="radio" id="gender_m" name="gender" required>
+		    <label for="gender_f">Female</label>
+	        <input type="radio" id="gender_f" name="gender" required>
+		</div>
+
+		<div>
+			<label for="car brand">Car Brands</label>
+	        <select id="car" required>
+				<option value=""disabled selected>please choose an option</option>
+				<option value="bmw">BMW</option>
+				<option value="audi">Audi</option>
+				<option value="mercedez">Mercedez</option>
+			</select>
+
+		<div>
+			<label for="car age">Car Age*</label>
+	        <input type="number" id="car age" placeholder="Car Age" name="car Age" required>
+			
+		</div>
+
+		<div>
+			<label for="dob">DOB*</label>
+	        <input type="date" id="dob" required>
+			
+		</div>
+
+		<div>
+			<label for="password">Password*</label>
+	        <input type="password" id="password"  placeholder="Password" required>
+			
+		</div>
+
+		<div>
+	
+	        <button type="submit">submit </button>
+			
+		</div>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
-</script>
+</script> 
 
 </body>
 
