--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-
+<!DOCTYPE html>                       
+                                             
 <html>
-
+                                                                                 
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -36,14 +36,14 @@
 			</select>
 
 		<div>
-			<label for="car age">Car Age*</label>
-	        <input type="number" id="car age" placeholder="Car Age" name="car Age" required>
+			<label for="cars">Car Age*</label>
+	        <input type="number" id="cars" placeholder="Car Age" name="cars" required>
 			
 		</div>
 
 		<div>
-			<label for="dob">DOB*</label>
-	        <input type="date" id="dob" required>
+			<label for="dop">DOP*</label>
+	        <input type="date" id="dop" required>
 			
 		</div>
 
