--- a/main.html
+++ b/main.html
@@ -27,8 +27,8 @@
 		</div>
 
 		<div>
-			<label for="car brand">Car Brands</label>
-	        <select id="car" required>
+			<label for="cars">Car Brands</label>
+	        <select id="cars" required>
 				<option value=""disabled selected>please choose an option</option>
 				<option value="bmw">BMW</option>
 				<option value="audi">Audi</option>
@@ -36,8 +36,8 @@
 			</select>
 
 		<div>
-			<label for="cars">Car Age*</label>
-	        <input type="number" id="cars" placeholder="Car Age" name="cars" required>
+			<label for="carage">Car Age*</label>
+	        <input type="number" id="carage" placeholder="Car Age" name="carage" required>
 			
 		</div>
 
@@ -50,7 +50,7 @@
 		<div>
 			<label for="password">Password*</label>
 	        <input type="password" id="password"  placeholder="Password" required>
-			
+			                                   
 		</div>
 
 		<div>
